Bug 406599 - [wayland] krfb just crashes
Summary: [wayland] krfb just crashes
Status: RESOLVED FIXED
Alias: None
Product: krfb
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexey Min
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-16 14:18 UTC by Damian Ivanov
Modified: 2019-05-18 15:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Damian Ivanov 2019-04-16 14:18:32 UTC
krfb under wayland just crashes
[zzz@localhost ~]$ krfb
KCrash: Application 'krfb' crashing...
KCrash: Attempting to start /usr/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__1

[1]+  Stopped                 krfb
Comment 1 Alexey Min 2019-05-18 15:08:02 UTC
Git commit 7624aee8e219d37626ace3004346c3356afdcde0 by Alexey Min.
Committed on 18/05/2019 at 15:07.
Pushed by alexeymin into branch 'master'.

Do not crash on wayland, gracefully exit with error instead

Summary:
Sadly, XTestQueryExtension just segfaults under wayland.
Avoid it by detecting QPA used.

Test Plan:
Nice error message when running in Wayland session.
{F6833467}

Still works in X11
{F6833069}

Reviewers: aacid, kossebau, jgrulich, #kde_applications, pino, ngraham

Reviewed By: pino

Subscribers: pino, ngraham

Tags: #kde_applications

Differential Revision: https://phabricator.kde.org/D21267

M  +12   -4    krfb/main.cpp

https://commits.kde.org/krfb/7624aee8e219d37626ace3004346c3356afdcde0