Do not crash on wayland, gracefully exit with error instead

Summary:
Sadly, XTestQueryExtension just segfaults under wayland.
Avoid it by detecting QPA used.

BUG: 406599

Test Plan:
Nice error message when running in Wayland session.
{F6833467}

Still works in X11
{F6833069}

Reviewers: aacid, kossebau, jgrulich, #kde_applications, pino, ngraham

Reviewed By: pino

Subscribers: pino, ngraham

Tags: #kde_applications

Differential Revision: https://phabricator.kde.org/D21267